# cpsat-scheduler

./: .gitignore  .nu-lint.toml  .nvim.lua  DESIGN.md  MATHEMATICS.md  README.md  buf.gen.yaml  build.nu  clean.nu  flake.nix  fmt_nu.nu  gen_alias.nu  gen_forms.nu  gen_proto.nu  go.mod  go.sum  lint.nu  pyproject.toml  roadmap.md  sqlc.yaml  task_tree.nu
cli/: CLI.md  (+12 more)
cpsat-model/: .gitignore  Makefile  bool_op_demo.py  build.nu  config.py  config_builder.py  div_demo.py  flake.nix  linexpr_demo.py  main.py  mod_demo.py  pyproject.toml  reification_demo.py  reification_demo_2.py
cpsat-model/cpsat_demos/: bool_mult_demo.py  div_demo.py  linexpr_demo.py  mod_demo.py  mult_demo.py  reification_demo.py  solution_printer.py
cpsat-model/cpsattask/: __init__.py  color.py  config.py  config_builder.py  print.py
cpsat-model/demos/: demo.py  flat_week.py
cpsat-model/demos/cpsat/: closed_domain_demo.py
cpsat-model/src/_demos/: demo.py  flat_week.py  pert.py
cpsat-model/src/_demos/cpsat/: bool_op_demo.py
cpsat-model/src/_demos/lib/: demo.py  pert.py
cpsat-model/src/cpsatmodel/: __init__.py  config.py  config_builder.py  eval_bin.py
cpsat-model/src/daemon/daemonpb/: service_pb2.py  service_pb2_grpc.py
cpsat-model/src/model/: daemon.py
cpsat-model/src/model/daemonpb/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
solver/: build.nu  clean.nu  flake.nix  pyproject.toml
solver/src/_demos/: flat_week.py  full.nu  view.nu
solver/src/_demos/cpsat/: add_cumulative.py  (+3 more)
solver/src/commonpb/: types_pb2.py  types_pb2.pyi  types_pb2_grpc.py
solver/src/cpsatmodel/: __init__.py  config.py  config_builder.py  print.py  units.py
solver/src/solver/: daemon.py
solver/src/solverpb/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
(+170 files in other folders)
