[project]
name = "cpsatscheduler"
version = "0.1.0"
description = "Use the power of CP-SAT Solver to schedule your time."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.80.0",
    "ortools>=9.15.6755",
    "scipy>=1.18.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "nuitka[app]>=4.0.8",
    "pytest>=9.1.1",
    "ruff>=0.16.0",
    "ty>=0.0.63",
]

