[project]
name = "cpsatmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ortools>=9.15.6755",
]

[tool.uv]
package = true

[project.scripts]
demo-flat-week = "_demos.flat_week:main"

[tool.pyright]
venvPath = "."
venv = ".venv"
