[project]
name = "cpsatmodel"
version = "0.1.0"
description = "Construct a valid CP-SAT model for optimization of a given task configuration."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.80.0",
    "ortools>=9.15.6755",
    "Nuitka[app]>=4.0.8"
]

[tool.uv]
package = true

[project.scripts]
demo-flat-week = "_demos.flat_week:main"

[tool.pyright]
venvPath = "."
venv = ".venv"

